--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-audio-server",
-  "description": "Audio server for Node.js with client integration"
+  "description": "Audio server for Node.js with client integration",
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
@@ -17,5 +17,5 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "prettier": "^2.0.5"
-  },
+  }
 }
