--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --recursive \"./src/**/test/*.js\"",
     "test-watch": "mocha --recursive \"./src/**/test/*.js\"  --watch",
-    "start": "node server.js"
+    "dev": "node dev/server.js"
   },
   "author": "Sérgio Crisóstomo",
   "license": "ISC",
