--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mocha": "^8.0.1",
     "prettier": "^2.0.5"
   }
 }
